set default spacing for titled paragraph

--- a/controls.yml
+++ b/controls.yml
@@ -861,6 +861,8 @@ titled_paragraph:
     type: plain_text
     tag: p
     text: $body
+  space: 30
+  styles: [vspaced]
 
 top_left:
   position: absolute
