--- a/controls.yml
+++ b/controls.yml
@@ -56,6 +56,7 @@ button:
   class: [action]
   tag: button
   attr: { title: $desc }
+  action: redirect
 
 button_image:
   class: [action]
@@ -547,6 +548,7 @@ list_item:
 list_text:
   type: plain_text
   tag: li
+  style: { margin-left: 16 }
 
 lowercase:
   text-transform: lowercase
