added za_vat validatator

--- a/validators.yml
+++ b/validators.yml
@@ -236,5 +236,6 @@ za_id:
     # - less_than(today)
     - /^\d{2}((0[1-9])|(1[0-2]))((0[1-9])|([12][0-9])|(3[01]))\d{7}$/
 
+za_vat: /^\d{10}$/
 
 za_tax_ref: /^\d{10}$/
