--- a/fields.yml
+++ b/fields.yml
@@ -66,7 +66,7 @@ confirm_password:
 
 country:
   options:
-    - sql: select code,name from country order by 1
+    - ref_list: country
 
 day_of_month:
   options:
@@ -266,6 +266,16 @@ query:
 
 redirect:
   type: link
+
+ref_list:
+  code: item_code
+  display: item_name
+  table: ref_list
+  filter: where list_name = '$list'
+  sort_field: 2
+  sort_order: asc
+  sort: order by $sort_field $sort_order
+  sql: select $code, $display from $table $filter $sort
 
 register:
   desc: Click here to register
