--- a/fields.yml
+++ b/fields.yml
@@ -66,7 +66,7 @@ confirm_password:
 
 country:
   options:
-    - ref_list: country
+    - ref_list
 
 day_of_month:
   options:
@@ -268,10 +268,10 @@ redirect:
   type: link
 
 ref_list:
-  code: item_code
-  display: item_name
+  code: code
+  display: name
   table: ref_list
-  filter: where list_name = '$list'
+  filter: where list = '$list'
   sort_field: 2
   sort_order: asc
   sort: order by $sort_field $sort_order
