--- a/error_page.yml
+++ b/error_page.yml
@@ -1,8 +1,9 @@
 ---
-error_page: 
+error_page:
   type: labelled_input_page
   name: Unexpected Error
   width: 630
+  position: { my: 'top', at: 'top+100' }
   style:
     color: rgb(20,60,90)
   desc: |
