--- a/fields.yml
+++ b/fields.yml
@@ -53,6 +53,17 @@ change_password:
   action: dialog
   url: /password_changer/change
 
+company_name:
+  valid:
+    - at_least(2)
+
+company_registration_no:
+  name: Company Registration Number
+  desc: >
+    Company registration number as it is stated on your CIPRO registration certificate.
+    YYYY/nnnnn/nn e.g 2006/294052/32. Pleae specify numbers without slashes(/).
+  attr: { min: 10000000000, max: 99999999999 }
+
 confirm_details:
   name: I confirm that the details provided are true and correct.
   valid: equals(1, Must confirm that details are true and correct)
@@ -168,9 +179,13 @@ id_no:
   question: Please enter your South Africa Identity Number
   desc: Valid South African ID number
   valid: za_id
+  attr: { min: 1000000000000, max: 9999999999999 }
+
 
 id_number:
   type: id_no
+
+identity_no:
 
 last_name:
   desc: Your last name or surname as written in your ID book
@@ -340,6 +355,7 @@ vat_no:
   name: VAT Number
   desc: VAT Number as it is written on the South African Revenue Services (SARS) certificate. Note This is a 10 digit number.
   valid: za_vat
+  attr: { min: 1000000000, max: 9999999999 }
 
 view_profile:
   desc: View my profile
@@ -374,3 +390,7 @@ wizard_post:
   call: $class::$invoker($key)
   action: post
   attr: {wizard-jump: $code}
+
+tax_reference_no:
+  name: Tax Reference Number
+  attr: { min: 1000000000, max: 9999999999 }
