factored out audit trail

--- a/fields.yml
+++ b/fields.yml
@@ -265,7 +265,11 @@ mukoni_logo:
 my_audit_trail:
   desc: My audit trail
   access: reg
-  url: /user/my_audit_trail
+  url: /audit_trail/user
+
+partner_audit_trail:
+  access: [admin]
+  url: /audit_trail/partner
 
 passport_document:
   desc: Certified copy of passport document
@@ -353,6 +357,8 @@ submit_page:
 
 support_email: Mukoni Support <support@mukoni.co.za>
 
+system_audit_trail:
+  url: /audit_trail/system
 
 title:
   desc: A descriptive or distinctive appellation, especially one belonging to a person by right of rank, office, attainment
