--- a/user.yml
+++ b/user.yml
@@ -254,14 +254,14 @@ login:
     - forgot_password: { action: dialog }
   post:
     - sql_values: |
-        select u.id uid, partner, u.email, first_name, last_name,
+        select u.id uid, partner pid, u.email, first_name, last_name,
           concat(first_name, ' ', last_name) full_name,
           u.cellphone, roles, groups,  ifnull(start_page,'home') start_page
         from user u join person p on u.email = p.email
         where u.email='$email'
     - load_lineage: [roles,role,code,base_code]
     - sql_exec: update user set attempts = 0 where id = $uid
-    - write_session: uid,partner,roles,email,first_name,last_name,full_name,cellphone
+    - write_session: uid,pid,roles,email,first_name,last_name,full_name,cellphone
     - close_dialog
     - redirect: /$start_page
 
